--- a/第一行代码.md
+++ b/第一行代码.md
@@ -579,3 +579,398 @@ intent.addCategory("com.pz.activitytest.MY_CATEGORY");
 ```
 
 当用户按下 Back 键，就会执行 onBackPressed() 方法中的代码，我们在这里添加返回的数据即可。
+
+
+
+### 2.4 活动的生命周期
+
+#### 2.4.1 返回栈
+
+Android 中的活动是层叠的，每启动一个活动就会覆盖到原活动之上，点击 Back 销毁最上面的活动，这就是返回栈。
+
+（详情看书P53）
+
+![image-20230801105429429](第一行代码/image-20230801105429429.png)
+
+
+
+#### 2.4.2 活动状态
+
+每个活动在其生命周期最多可能会有4个状态。
+
+**运行状态**
+
+当一个活动位于返回栈顶，就是运行状态。
+
+
+
+**暂停状态**
+
+当一个活动不再处于栈顶位置，但仍然可见，这时活动就进入了暂停状态。
+
+
+
+**停止状态**
+
+当一个活动不再处于栈顶位置，并且完全不可见的时候，就进入了停止状态。
+
+
+
+**销毁状态**
+
+当活动从返回栈移除后就变成了销毁状态。
+
+
+
+#### 2.4.3 活动的生存期
+
+Activity 类定义了 7个回调方法，覆盖了活动生命周期的每一个环节
+
+![image-20230801105512851](第一行代码/image-20230801105512851.png)
+
+除了onRestart() 方法，其他都是两两相对，又可以分成 3种生存期
+
+![image-20230801105554372](第一行代码/image-20230801105554372.png)
+
+Android 方法提供了一张活动生命周期的示意图
+
+![image-20230801105730057](第一行代码/image-20230801105730057.png)
+
+- 左边看不清的是 kill process
+- 下面看不清的是 close activity
+
+
+
+#### 2.4.4 体验活动的生命周期
+
+创建了一个新的工程文件，随后起了两个网页，并重写了主函数中上述的那些方法，打印出来让我们感受一下上述那图。
+
+（书 P56 页）
+
+
+
+#### 2.4.5 活动被回收了怎么办
+
+如果活动A进入到停止状态有可能会被系统回收的，那么如果活动A中可能存在临时数据和状态就会影响用户体验。
+
+所以应对这种情况，Activity 中还提供了一个 onSaveInstanceState() 回调方法，这个方法可以提供回收之前一定被调用，因此我们可以通过这个方法来解决被回收时临时数据得不到保存的问题。
+
+onSaveInstanceState() 方法会携带一个 Bundle 类型的参数，Bundle 提供了一系列的方法用于保存数据，比如使用 putString() 方法来保存字符串， putInt() 用来保存整形，以此类推，每个保存方法都需要传入两个参数
+
+- 第一个参数是 键，用于后面从 Bundle 取值
+- 第二个参数是 真正要保存的内容
+
+在 MainActivity 中可以这样保存数据
+
+```java
+    protected void onSaveInstanceState(Bundle outState){
+        super.onSaveInstanceState(outState);
+        String tempData = "emmmmmmm";
+        outState.putString("data_key", tempData);
+    }
+```
+
+那么数据保存下来了还如何恢复？onCreate() 方法其实也有一个 Bundle 类型的参数，这个参数一般情况下都是 null，但是活动被系统回收前有通过 onSavaInstanceState() 方法来保存数据的话，这个参数就会带有之前保存的数据
+
+```java
+        if (savedInstanceState != null){
+            String tempData = savedInstanceState.getString("data_key");
+            Log.d(TAG, tempData);
+        }
+```
+
+之后就做相对应的恢复即可。
+
+我们在使用 Intent 传递数据时也是用的类似的方法，Intent 还可以结合 Bundle 一起传递数据，首先传递的数据都保存在 Bundle 对象中，然后再讲 Bundle 对象放在 Intent 里，到了目标活动之后先对 Intent 中取出 Bundle，再从 Bundle 中一一取出数据。
+
+
+
+### 2.5 活动的启动模式
+
+需要在特定的需求为每个活动指定恰当的启动模式。启动模式有4种，分别是 standard、singleTop、singleTask 和 singleInstance，可以在 AndroidManifest.xml 中通过给 activity 标签指定 android:launchMode 属性来选择启动模式。
+
+
+
+#### 2.5.1 standard
+
+在该模式下的活动是由返回栈来管理活动的，每当启动一个活动，就在会返回栈中入栈，并在栈顶的位置。
+
+**所以在该模式下，系统不会在乎这个活动是否在返回栈中已经存在，每次启动都会创建该活动的一个新的实例。**
+
+于是做个实验，在 FirstActivity 里再启动一次 FirstActivity
+
+```java
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        Log.d("FirstActivity", this.toString());
+        setContentView(R.layout.first_layout);
+        Button button1 = (Button) findViewById(R.id.button_1);
+        button1.setOnClickListener(new View.OnClickListener(){
+            @Override
+            public void onClick(View v){
+                Intent intent = new Intent(FirstActivity.this, FirstActivity.class);
+                startActivity(intent);
+            }
+        });
+    }
+```
+
+连续点击两次可以发现
+
+![image-20230801132447083](第一行代码/image-20230801132447083.png)
+
+所以要退出这个程序需要按三次 Back 键
+
+standard 模式原理示意图
+
+![image-20230801132527266](第一行代码/image-20230801132527266.png)
+
+
+
+#### 2.5.2 singleTop
+
+如果觉得 standard 模式不合理，可以用 singleTop，**该模式下启动活动会检测返回栈的栈顶里是否已经有该活动了**，如果有就直接使用，不会像标准模式下的反复启动了，**如果不在栈顶，还是会创建新的实例的**。
+
+```xml
+<activity
+            android:name=".FirstActivity"
+            android:launchMode = "singleTop"
+            android:label="This is FirstActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+```
+
+相关代码（书 P66）
+
+singleTop 模式原理示意图
+
+![image-20230801133014155](第一行代码/image-20230801133014155.png)
+
+
+
+#### 2.5.3 singleTask
+
+**该方法是解决整个返回栈只有唯一一个实例，在返回栈找到之后，把活动之上的所有活动统统出栈，如果没有发现就创建一个新的实例。**
+
+```xml
+<activity
+            android:name=".FirstActivity"
+            android:launchMode = "singleTask"
+            android:label="This is FirstActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+</activity>
+```
+
+相关代码（书 P67）
+
+singleTask 相关示意图
+
+​	![image-20230801133302532](第一行代码/image-20230801133302532.png)
+
+
+
+#### 2.5.4 singleInstance
+
+不同与前三种启动模式，**该模式的活动会启用一个新的返回栈来管理该活动**（如果 singleTask 模式指定了不同的 taskAffinity，也会启动一个新的返回栈）。
+
+该模式主要是解决与其他程序共享这个活动的实例，比如 A 和 B 程序都有自己的返回栈，而同一个实例在不同返回栈入栈必然是创建了新的实例，所以用该模式启动该实例时创建了一个新的返回栈，这不管是哪个程序访问这个活动，都共用一个返回栈，解决了共享实例的问题。
+
+设置该活动为该模式
+
+```xml
+<activity android:name=".SecondActivity"
+            android:launchMode="singleInstance">
+            <intent-filter>
+                <action android:name="com.pz.activitytest.ACTION_START" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="com.pz.activitytest.MY_CATEGORY" />
+            </intent-filter>
+</activity>
+```
+
+在每个活动里打印当前返回栈的 id
+
+```java
+    @Override
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        Log.d("FirstActivity", "Task id is" + getTaskId());
+        setContentView(R.layout.first_layout);
+        Button button1 = (Button) findViewById(R.id.button_1);
+        button1.setOnClickListener(new View.OnClickListener(){
+            @Override
+            public void onClick(View v){
+                Intent intent = new Intent(FirstActivity.this, SecondActivity.class);
+                startActivity(intent);
+            }
+        });
+    }
+```
+
+```java
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        Log.d(TAG, "Task id is" + getTaskId());
+        setContentView(R.layout.second_layout);
+        Button button2 = (Button) findViewById(R.id.button_2);
+        button2.setOnClickListener(new View.OnClickListener(){
+            @Override
+            public void onClick(View v) {
+                Intent intent = new Intent(SecondActivity.this, ThirdActivity.class);
+                startActivity(intent);
+            }
+        });
+    }
+```
+
+```java
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        Log.d(TAG, "Task id is " + getTaskId());
+        setContentView(R.layout.third_layout);
+    }
+```
+
+启动程序按按钮可以发现
+
+![image-20230801135721660](第一行代码/image-20230801135721660.png)
+
+这时候按返回键，会发现 ThirdActvitiy 直接返回到 FirstActivity，再按下 Back 又返回到 SecondActivity。
+
+因为 First 和 Third 是同一个返回栈，Third 出栈，First 就成了栈顶，First 再返回这时候返回栈就空了，于是显示了另一个返回栈的栈顶活动即 Second，这时候再按返回就退出了程序。
+
+singleInstance 模式原理示意图
+
+![image-20230801140037559](第一行代码/image-20230801140037559.png)
+
+
+
+### 2.6  活动的最佳实践
+
+#### 2.6.1 知晓当前是在哪一个活动
+
+看自己代码当然知道在哪一个活动，但是看别人代码就可能找不到了，本节就是讲解这个。
+
+首先需要创建一个 BaseActivity 类，直接找到该包 -> new -> Java Class，注意这个活动和普通活动创建不太一样，因为不需要在 xml 里面注册，所以创建一个普通的 Java 类就可以了。
+
+```java
+    protected void onCreate(Bundle savedInstanceState){
+        super.onCreate(savedInstanceState);
+        Log.d("BaseActivity", getClass().getSimpleName());
+        ActivityCollector.addActivity(this);
+    }
+```
+
+在 onCreate 方法中获取了当前实例的类名，并通过 Log 打印出来了。
+
+接下来让所有的活动修改继承结构，不再继承 AppCompatActivity，而是继承 BaseActivity，由于该活动继承 AppCompatActivity 的，所以所有活动的现有功能不受影响，它们仍然继承了 Activity 中的所有特性。
+
+现在每当我们进入到一个活动的界面，该活动的类名就会被打印出来，这样就可以时时刻刻知晓当前界面对应的是哪一个活动了。
+
+![image-20230801141907788](第一行代码/image-20230801141907788.png)
+
+
+
+#### 2.6.2 随时退出程序
+
+当手机界面到了 Third，就需要按三次返回才能退出，其实这也牵扯了**如果我们需要一个程序注销或退出的功能该怎么写**，必须要有一个随时随地退出程序方案。
+
+新建一个 ActivityCollector 类作为活动管理器
+
+```java
+package com.pz.activitytest;
+
+import android.app.Activity;
+
+import java.util.ArrayList;
+import java.util.List;
+
+public class ActivityCollector {
+
+    public static List<Activity> activities = new ArrayList<>();
+
+    public static void addActivity(Activity activity){
+        activities.add(activity);
+    }
+
+    public static void removeActivity(Activity activity){
+        activities.remove(activity);
+    }
+
+    public static void finishAll(){
+        for (Activity activity : activities){
+            if (!activity.isFinishing())
+                activity.finish();
+            }
+        }
+    }
+}
+```
+
+在该活动管理器中
+
+- 通过一个 List 来暂存活动
+- 提供一个 addActivity() 方法用于向 List 中添加一个活动
+- 提供一个 removeActivity() 方法用于从 List 中移除活动
+- 最后提供一个 finishAll() 方法用于将 List 中存储的活动全部销毁
+
+接下来修改 BaseActivity 代码
+
+```java
+public class BaseActivity extends AppCompatActivity {
+
+    @Override
+    protected void onCreate(Bundle savedInstanceState){
+        super.onCreate(savedInstanceState);
+        Log.d("BaseActivity", getClass().getSimpleName());
+        ActivityCollector.addActivity(this);
+    }
+
+    @Override
+    public void onDestroy(){
+        super.onDestroy();
+        ActivityCollector.removeActivity(this);
+    }
+
+}
+```
+
+每次创建与销毁都会对应修改活动管理器，之后不管想在什么地方退出只需要调用 finishAll 即可。
+
+当然还可以在销毁所有活动的代码后面再加上关掉当前进程的代码，以保证进程完全退出，其方法是 killProcess()，该方法接收一个进程的 id，可以用 myPid() 方法获取，需要注意的是该关进程方法只能用于关当前进程，不能用这个方法关其他进程。
+
+
+
+#### 2.6.3 启动活动的最佳方法
+
+作者提供了一个思维矫正，当我们启动一个活动传递的数据该怎么写，比如我们 First 要启动 Second，而且带有两个数据
+
+首先在 Second 里添加一个方法
+
+```java
+    public static void actionStart(Context context, String data1, String data2) {
+        Intent intent = new Intent(context, SecondActivity.class);
+        intent.putExtra("param1", data1);
+        intent.putExtra("param2", data2);
+        context.startActivity(intent);
+    }
+```
+
+这样写在 First 里也简化了代码
+
+```java
+            public void onClick(View v){
+                SecondActivity.actionStart(FirstActivity.this, "data1", "data2");
+            }
+```
+
+养成这个好习惯，以后编写的每个活动都添加类似的方法。
+
+
+
