--- a/从0开始的加密时间.md
+++ b/从0开始的加密时间.md
@@ -504,3 +504,38 @@ int main() {
 
 ```
 
+
+
+# [SWPU2019]EasiestRe
+
+加密如下，流程很简单，异或，转二进制，然后叠加
+
+![image-20230817145400502](从0开始的加密时间/image-20230817145400502.png)
+
+而这个叠加的加密经常碰到一般都用Z3解决，然而看到个神奇的脚本，用乘法逆元  + 贪心选择解决了，思路如下
+
+- 乘法逆元求出的 t 是若干个 key 的相加
+- 贪心选择就是从大到小找到局部最优就是一个key
+
+```python
+iv=0x1234
+inv=12
+c=[0x3d1,0x2f0,0x52,0x475,0x1d2,0x2f0,0x224,0x51c,0x4e6,0x29f,0x2ee,0x39b,0x3f9,0x32b,0x2f2,0x5b5,0x24c,0x45a,0x34c,0x56d,0xa,0x4e6,0x476,0x2d9]
+key=[2,3,7,14,30,57,120,251]
+flag=[]
+for i in range(24):
+    t=c[i]*inv%491
+    p=""
+    for i in range(8):
+        if key[7-i]>t:
+            p+="0"
+        else:
+            p+="1"
+            t-=key[7-i]
+    flag.append(int(p[::-1],2))
+print(chr((flag[0]^0x1234)&0xff),end="")
+for i in range(1,len(flag)):
+    print(chr((flag[i]^c[i-1])&0xff),end="")
+#swpuctf{y0u_@re_s0_coo1}
+```
+
